samples/_failures_safe/1761334131_89ced3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_247b0a9f.c: In function ‘main’:
./samples/SAFE/__tmp_247b0a9f.c:159:11: error: expected ‘;’ at end of input
  159 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_247b0a9f.c:159:5: error: expected declaration or statement at end of input
  159 |     printf
      |     ^~~~~~
